--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "main": "index.js",
   "author": "Venus Lu",
   "license": "MIT",
+  "scripts": {
+    "serve": "live-server public/",
+    "build": "webpack --watch",
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+  },
   "dependencies": {
+    "babel-cli": "6.24.1",
     "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1"}
+    "babel-preset-react": "6.24.1",
+    "live-server": "^1.2.1",
+    "validator": "8.0.0",
+    "webpack": "3.1.0"
+  }
 }
- 
