--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build": "webpack --watch",
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "live-server": "^1.2.1",
     "react": "16.0.0",
     "react-dom": "16.0.0",
+    "react-modal": "2.2.2",
     "validator": "8.0.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
